<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Message" Id="{3a6a707d-2fa5-4b7c-9941-24b715ac8048}">
    <Declaration><![CDATA[TYPE ST_Message :
STRUCT
	eLogLevel:			E_LogLevel;
	nID:				UDINT;
	{attribute 'displaymode':='datetime'}
	nTimestamp:			ULINT;	
	sSource:			STRING(255);
	sMessage:			STRING(255);
	sDefault:			STRING(255);
	sArguments:			STRING(255);
	bActive:			BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>